# SC4002-NLP

./: .gitignore  Part3_1_biLSTM_biGRU.ipynb  Part3_2_CNN.ipynb  Part3_3_enhancements.ipynb  Part3_4.ipynb  Part3_4_Enhancements_weaktopics.ipynb  README.md  assignment.ipynb  assignment_oov_embedding_added.ipynb  pyproject.toml  q3.2.ipynb
