[project]
name = "sc4002-nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "en-core-web-sm",
    "ipykernel>=6.30.1",
    "numpy==1.26.4",
    "pip>=25.2",
    "spacy>=3.7.2,<3.8.0",
    "torchtext==0.4.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz" }
